# spinny

./: .envrc  Cargo.toml  build.rs
.github/workflows/: test.yml
src/: cli.rs  event.rs  lib.rs  main.rs  matrix.rs  renderer.rs  solids.rs  utils.rs
src/shapes/: shape.tera  shapes.toml
