[package]
name = "spinny"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
crossterm = "0.28.1"
serde = "1.0.209"
toml = "0.8.19"
clap = { version = "4.5.16", features = ["derive"] }
clap_complete = "4.5.23"

[build-dependencies]
serde = "1.0.209"
tera = "1.20.0"
toml = "0.8.19"
